# iterator

./: .gitignore  CLAUDE.md  ITERATIVE_OPTIMIZER_SUMMARY.md  README.md  SKILLS.md
.claude/: SKILLS_QUICK_REF.md
.claude/skills/: README.md
.claude/skills/CS500/: INTEGRATION_GUIDE.md  README.md  SKILL_INDEX.md
.claude/skills/hello-world/: SKILL.md  reference.md
docs/: SKILLS.md
docs/archive/: SKILLS_BOOTSTRAP_SUMMARY.md
projects/: README.html  README.md
projects/collating-iterator/: BUILD-STATUS.md  INDEX.html  LEARNINGS.html  LEARNINGS.md  README.html  README.md
projects/collating-iterator/01-specification/: problem-spec.html  problem-spec.tex
projects/collating-iterator/02-analysis/: README.html  README.md  algorithmic-analysis.html  algorithmic-analysis.tex  arxiv-survey.html  arxiv-survey.md  candidate-algorithms.html  candidate-algorithms.tex  comparative-complexity.html  comparative-complexity.tex  lower-bound.html  lower-bound.tex
projects/collating-iterator/03-design/: README.html  README.md  comparative-analysis.html  comparative-analysis.tex  design-selection.html  design-selection.tex
projects/collating-iterator/04-implementation/: README.html  README.md
projects/collating-iterator/04-implementation/cpp/: CMakeLists.txt
projects/collating-iterator/04-implementation/cpp/include/: collating_iterator.hpp
projects/collating-iterator/04-implementation/cpp/tests/: test_collating_iterator.cpp
projects/collating-iterator/05-testing/: README.html  README.md  test-results.md  test-strategy.md
projects/collating-iterator/06-benchmarking/: README.html  README.md  test-data-catalog.html  test-data-catalog.md
projects/collating-iterator/06-benchmarks/: benchmark-design.md
projects/collating-iterator/07-validation/: README.html  (+1 more)
prompts/: iterator.txt
prompts/test-scenarios/: sort_array_n.md
scripts/: convert-latex-to-html.sh  pandoc-header.html
(+56 files in other folders)
